--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
-  "trailingComma": "es5",
-  "semi": false,
+  "semi": true,
+  "trailingComma": "all",
   "singleQuote": true,
-  "printWidth": 150,
-  "bracketSameLine": true
+  "printWidth": 80,
+  "tabWidth": 2
 }
