--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -1,28 +1,42 @@
-name: Render assets
+name: Render videos
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - FtC
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@master
 
-      - name: Use Node.js
-        uses: actions/setup-node@v1
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
         with:
-          node-version: '16.x'
+          ref: FtC
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
 
       - name: Install dependencies
         run: yarn install
 
-      - name: Render
-        run: yarn render
+      - name: Install Livepeer React
+        run: yarn add @livepeer/react
 
-      - name: Commit updates
-        uses: EndBug/add-and-commit@v9
-        with:
-          default_author: github_actions
-          message: 'generated assets'
+      - name: Get Video
+        run: yarn getVideo
+        env:
+          LIVEPEER_API_KEY: ${{ secrets.LIVEPEER_API_KEY }}
+
+      - name: Render video
+        run: yarn render
+        env:
+          LIVEPEER_API_KEY: ${{ secrets.LIVEPEER_API_KEY }}
+
+      - name: Upload video
+        run: yarn uploadVideo
+        env:
+          LIVEPEER_API_KEY: ${{ secrets.LIVEPEER_API_KEY }}
