--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -20,23 +20,33 @@ jobs:
         with:
           node-version: 16
 
-      - name: Install dependencies
-        run: yarn install
+    - name: Setup Chrome
+      uses: browser-actions/setup-chrome@latest
 
-      - name: Install Livepeer React
-        run: yarn add @livepeer/react
+    - name: Setup ffmpeg
+      run: |
+        sudo apt-get install ffmpeg
 
-      - name: Get Video
-        run: yarn getVideo
-        env:
-          LIVEPEER_API_KEY: ${{ secrets.LIVEPEER_API_KEY }}
+    - name: Install ts-node
+      run: yarn global add ts-node
 
-      - name: Render video
-        run: yarn render
-        env:
-          LIVEPEER_API_KEY: ${{ secrets.LIVEPEER_API_KEY }}
+    - name: Install dependencies
+      run: yarn install
 
-      - name: Upload video
-        run: yarn uploadVideo
-        env:
-          LIVEPEER_API_KEY: ${{ secrets.LIVEPEER_API_KEY }}
+    - name: Install Livepeer React
+      run: yarn add @livepeer/react
+
+    - name: Get Video
+      run: yarn getVideo
+      env:
+        LIVEPEER_API_KEY: ${{ secrets.LIVEPEER_API_KEY }}
+
+    - name: Render video
+      run: yarn render
+      env:
+        LIVEPEER_API_KEY: ${{ secrets.LIVEPEER_API_KEY }}
+
+    - name: Upload video
+      run: yarn uploadVideo
+      env:
+        LIVEPEER_API_KEY: ${{ secrets.LIVEPEER_API_KEY }}
