--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -24,8 +24,9 @@ jobs:
         uses: browser-actions/setup-chrome@latest
 
       - name: Setup ffmpeg
-        run: |
-          sudo apt-get install ffmpeg
+         run: |
+            sudo apt-get update
+            sudo apt-get install -y ffmpeg libx264-dev
 
       - name: Install ts-node
         run: yarn global add ts-node
