--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -27,6 +27,8 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y ffmpeg libx264-dev
+          ffmpeg -codecs
+
 
       - name: Install ts-node
         run: yarn global add ts-node
