--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -41,7 +41,7 @@ jobs:
         run: mkdir -p ./public/videos/
 
       - name: Get Video
-        run: ffmpeg -i https://lp-playback.com/hls/1ceb373b5h4y4l01/index.m3u8 -c:v libx264 ./public/videos/stream.mp4
+        run: curl -L -o ./public/videos/stream.mp4 "$videoUrl"
 
       - name: Render video
         run: yarn render
