--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@livepeer/react": "^2.6.0",
     "@remotion/cli": "3.3.101",
     "@remotion/google-fonts": "3.3.101",
+    "@remotion/motion-blur": "^4.0.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "remotion": "3.3.101",
