Added Prettier Workflow

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "render": "ts-node src/scripts/render",
     "upgrade": "remotion upgrade",
     "test": "eslint src --ext ts,tsx,js,jsx && tsc",
-    "prettier": "prettier './src' --write",
+    "prettier:fix": "prettier './src' --write",
+    "prettier:check": "prettier './src' --write",
     "getVideo": "ts-node './src/scripts/videoFetcher.ts'",
     "cutAndRender": "ts-node './src/scripts/cutAndRender.ts'",
     "uploadVideo": "ts-node './src/scripts/upload.ts'",
