--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "upgrade": "remotion upgrade",
     "test": "eslint src --ext ts,tsx,js,jsx && tsc",
     "prettier:fix": "prettier './src' --write",
-    "prettier:check": "prettier './src' --write",
+    "prettier:check": "prettier './src' --check",
     "getVideo": "ts-node './src/scripts/videoFetcher.ts'",
     "cutAndRender": "ts-node './src/scripts/cutAndRender.ts'",
     "uploadVideo": "ts-node './src/scripts/upload.ts'",
