--- a/package.json
+++ b/package.json
@@ -20,20 +20,20 @@
   ],
   "dependencies": {
     "@livepeer/react": "^2.6.0",
-    "@remotion/cli": "4.0.20",
-    "@remotion/google-fonts": "4.0.20",
-    "@remotion/lottie": "4.0.20",
-    "@remotion/motion-blur": "4.0.20",
-    "@remotion/shapes": "^4.0.27",
+    "@remotion/cli": "4.0.27",
+    "@remotion/google-fonts": "4.0.27",
+    "@remotion/lottie": "4.0.27",
+    "@remotion/motion-blur": "4.0.27",
+    "@remotion/shapes": "4.0.27",
     "lottie-web": "^5.12.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "remotion": "4.0.20",
+    "remotion": "4.0.27",
     "toml": "^3.0.0"
   },
   "devDependencies": {
-    "@remotion/eslint-config": "4.0.20",
-    "@remotion/tailwind": "4.0.20",
+    "@remotion/eslint-config": "4.0.27",
+    "@remotion/tailwind": "4.0.27",
     "@types/node-fetch": "^2.6.4",
     "@types/react": "^18.0.26",
     "@types/web": "^0.0.86",
