--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 node_modules
 dist
 .DS_Store
-.env.local
+.env*
 stream.mp4
 
 # Ignore the output video from Git but not videos you import into src/.
