--- a/package.json
+++ b/package.json
@@ -1,54 +1,54 @@
 {
-  "name": "w3ps-assets",
-  "license": "MIT",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "remotion preview",
-    "build": "remotion render",
-    "render": "ts-node src/scripts/render",
-    "upgrade": "remotion upgrade",
-    "eslint:check": "eslint src --ext ts,tsx,js,jsx && tsc",
-    "prettier:fix": "prettier './src' --write",
-    "prettier:check": "prettier './src' --check",
-    "getVideo": "ts-node './src/scripts/videoFetcher.ts'",
-    "cutAndRender": "ts-node './src/scripts/cutAndRender.ts'",
-    "uploadVideo": "ts-node './src/scripts/upload.ts'",
-    "renderAndUpload": "ts-node './src/scripts/renderAndUpload.ts'"
-  },
-  "sideEffects": [
-    "*.css"
-  ],
-  "dependencies": {
-    "@livepeer/react": "^2.6.0",
-    "@remotion/cli": "4.0.27",
-    "@remotion/google-fonts": "4.0.27",
-    "@remotion/lambda": "4.0.27",
-    "@remotion/lottie": "4.0.27",
-    "@remotion/motion-blur": "4.0.27",
-    "@remotion/shapes": "4.0.27",
-    "lottie-web": "^5.12.2",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "remotion": "4.0.27",
-    "toml": "^3.0.0"
-  },
-  "devDependencies": {
-    "@remotion/eslint-config": "4.0.27",
-    "@remotion/tailwind": "4.0.27",
-    "@types/node-fetch": "^2.6.4",
-    "@types/react": "^18.0.26",
-    "@types/web": "^0.0.86",
-    "autoprefixer": "10.4.4",
-    "cross-fetch": "^3.1.6",
-    "css-loader": "^6.7.1",
-    "eslint": "^8.30.0",
-    "postcss": "8.4.12",
-    "postcss-loader": "6.2.1",
-    "postcss-preset-env": "7.4.3",
-    "prettier": "^2.8.1",
-    "style-loader": "^3.3.1",
-    "tailwindcss": "^3.1.6",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
-  }
+    "name": "w3ps-assets",
+    "license": "MIT",
+    "version": "1.0.0",
+    "scripts": {
+        "dev": "remotion preview",
+        "build": "remotion render",
+        "render": "ts-node src/scripts/renderAndUpload.ts",
+        "upgrade": "remotion upgrade",
+        "eslint:check": "eslint src --ext ts,tsx,js,jsx && tsc",
+        "prettier:fix": "prettier './src' --write",
+        "prettier:check": "prettier './src' --check",
+        "getVideo": "ts-node './src/scripts/videoFetcher.ts'",
+        "cutAndRender": "ts-node './src/scripts/cutAndRender.ts'",
+        "uploadVideo": "ts-node './src/scripts/upload.ts'",
+        "renderAndUpload": "ts-node './src/scripts/renderAndUpload.ts'"
+    },
+    "sideEffects": [
+        "*.css"
+    ],
+    "dependencies": {
+        "@livepeer/react": "^2.6.0",
+        "@remotion/cli": "4.0.27",
+        "@remotion/google-fonts": "4.0.27",
+        "@remotion/lambda": "4.0.27",
+        "@remotion/lottie": "4.0.27",
+        "@remotion/motion-blur": "4.0.27",
+        "@remotion/shapes": "4.0.27",
+        "lottie-web": "^5.12.2",
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0",
+        "remotion": "4.0.27",
+        "toml": "^3.0.0"
+    },
+    "devDependencies": {
+        "@remotion/eslint-config": "4.0.27",
+        "@remotion/tailwind": "4.0.27",
+        "@types/node-fetch": "^2.6.4",
+        "@types/react": "^18.0.26",
+        "@types/web": "^0.0.86",
+        "autoprefixer": "10.4.4",
+        "cross-fetch": "^3.1.6",
+        "css-loader": "^6.7.1",
+        "eslint": "^8.30.0",
+        "postcss": "8.4.12",
+        "postcss-loader": "6.2.1",
+        "postcss-preset-env": "7.4.3",
+        "prettier": "^2.8.1",
+        "style-loader": "^3.3.1",
+        "tailwindcss": "^3.1.6",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.9.4"
+    }
 }
